Cabal-version:       >=1.2
Name:                crypto-conduit
Version:             0.1
Synopsis:            Conduit interface for cryptographic operations (from crypto-api).
Homepage:            https://github.com/meteficha/crypto-conduit
License:             BSD3
License-file:        LICENSE
Author:              Felipe Lessa <felipe.lessa@gmail.com>
Maintainer:          Felipe Lessa <felipe.lessa@gmail.com>
Category:            Cryptography
Build-type:          Simple

Description:
  This package contains everything that you need to use a
  cryptographic package that supports the @crypto-api@ package
  using conduits from the @conduit@ package.

Extra-source-files:
  README

Source-repository head
  Type:     git
  Location: git://github.com/meteficha/crypto-conduit.git

Library
  Hs-Source-Dirs: src
  Exposed-modules:
    Crypto.Conduit
  Build-depends:
    base         >= 3   && < 5,
    bytestring   >= 0.9 && < 0.10,
    cereal       >= 0.3 && < 0.4,
    crypto-api   >= 0.8 && < 0.9,
    conduit      >= 0.0 && < 0.1
  GHC-options: -Wall
